[tool.poetry]
name = "czi-sampling"
version = "0.1.0"
description = ""
authors = ["Ko Sugawara <ko.sugawara@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "czi_sampling", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
czifile = "^2019.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
